--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <main></main>
 
-    <footer class="debug">
+    <footer>
       <div class="container-flex">
         <div class="left-foot">
           <div class="cont-video">
@@ -58,19 +58,35 @@
             <i class="fas fa-signal"></i>
             <span>poiling</span>
           </div>
-          <div class="cont-video">
+          <div class="cont-video active">
             <i class="fas fa-external-link-square-alt"></i>
             <span>share screen</span>
           </div>
+
+          <div class="chevron">
+            <i class="fas fa-chevron-up"></i>
+          </div>
+
           <div class="cont-video">
             <i class="far fa-comment-dots"></i>
             <span>Chat</span>
           </div>
-          <div class="cont-video"><span>Record </span></div>
-          <div class="cont-video"><span>Breackout Rooms </span></div>
-          <div class="cont-video"><span>More</span></div>
+          <div class="cont-video">
+            <i class="fas fa-dot-circle"></i>
+            <span>Record </span>
+          </div>
+          <div class="cont-video">
+            <i class="fas fa-th-large"></i>
+            <span>Breackout Rooms </span>
+          </div>
+          <div class="cont-video">
+            <i class="fas fa-ellipsis-h"></i>
+            <span>More</span>
+          </div>
         </div>
-        <div class="right-foot"></div>
+        <div class="right-foot">
+          <div class="end">End Meeting</div>
+        </div>
       </div>
     </footer>
   </body>
