--- a/index.html
+++ b/index.html
@@ -18,10 +18,245 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Zoom</title>
+    <title>Zoom Meeting ID: 4982734982</title>
   </head>
   <body>
-    <main></main>
+    <main>
+      <div class="cont-init">
+        <div id="arrows"><i class="fas fa-expand-arrows-alt"></i></div>
+        <div id="view">Speaker View</div>
+      </div>
+
+      <div class="container-flex-tot">
+        <div class="container-flex-left">
+          <div>
+            <i class="fas fa-caret-left"></i>
+          </div>
+          <div>1/2</div>
+        </div>
+        <div class="container-flex-main">
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="img/call.jpg" alt="call" />
+            <div class="nome-cognome">
+              <span class="microphone"
+                ><i class="fas fa-microphone-alt"></i
+              ></span>
+              <span class="red">/</span>
+              <p>Nome e Cognome</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container-flex-right">
+          <div>
+            <i class="fas fa-caret-right"></i>
+          </div>
+          <div>1/2</div>
+        </div>
+      </div>
+    </main>
 
     <footer>
       <div class="container-flex">
