--- a/index.html
+++ b/index.html
@@ -22,238 +22,240 @@
   </head>
   <body>
     <main>
-      <div class="cont-init">
-        <div id="arrows"><i class="fas fa-expand-arrows-alt"></i></div>
-        <div id="view">Speaker View</div>
-      </div>
-
-      <div class="container-flex-tot">
-        <div class="container-flex-left">
-          <div>
-            <i class="fas fa-caret-left"></i>
-          </div>
-          <div>1/2</div>
-        </div>
-        <div class="container-flex-main">
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/call.jpg" alt="call" />
-            <div class="nome-cognome">
-              <span class="microphone"
-                ><i class="fas fa-microphone-alt"></i
-              ></span>
-              <span class="red">/</span>
-              <p>Nome e Cognome</p>
-            </div>
-          </div>
+      <div class="margini">
+        <div class="cont-init">
+          <div id="arrows"><i class="fas fa-expand-arrows-alt"></i></div>
+          <div id="view">Speaker View</div>
         </div>
 
-        <div class="container-flex-right">
-          <div>
-            <i class="fas fa-caret-right"></i>
+        <div class="container-flex-tot">
+          <div class="container-flex-left">
+            <div>
+              <i class="fas fa-caret-left"></i>
+            </div>
+            <div>1/2</div>
           </div>
-          <div>1/2</div>
+          <div class="container-flex-main">
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+
+            <div class="margini-div">
+              <img src="img/call.jpg" alt="call" />
+              <div class="nome-cognome">
+                <span class="microphone"
+                  ><i class="fas fa-microphone-alt"></i
+                ></span>
+                <span class="red">/</span>
+                <p>Nome e Cognome</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="container-flex-right">
+            <div>
+              <i class="fas fa-caret-right"></i>
+            </div>
+            <div>1/2</div>
+          </div>
         </div>
       </div>
     </main>
